--- a/Ruby/tic_tac_toe.arb
+++ b/Ruby/tic_tac_toe.arb
@@ -221,7 +221,7 @@ class Game
     end
 
     def print_player_turn
-        puts "#{@whos_turn.name}'s turn. Please select a slot to place your '#{@whos_turn.symbol}'"
+        puts "#{@whos_turn.name}'s turn. Type a number between 1-9 to place your '#{@whos_turn.symbol}.'"
     end
 
     def print_score
@@ -234,7 +234,7 @@ print "\nWelcome to tic-tac-toe!\n"
 print "\nEnter Player 1 Name: "
 player_name = gets.chomp
 player1 = Player.new(player_name)
-print "\nEnter Player 1 Name: "
+print "\nEnter Player 2 Name: "
 player_name = gets.chomp
 player2 = Player.new(player_name)
 
