Added JS cipher. Corrected name

--- a/Ruby/caesar_cipher.arb
+++ b/Ruby/caesar_cipher.arb
@@ -1,4 +1,4 @@
-def cesaer_cipher(str, shiftNum)
+def caesar_cipher(str, shiftNum)
     alpha = 'abcdefghijklmnopqrstuvwxyz'.split('')                              # Define alphabet
     shiftedStr = str.split('').map do |char|                                    # Map the passed in string
         (char =~ /[[:alpha:]]/) ?                                               # Check if character
@@ -15,4 +15,4 @@ print "\nType a message to be encrypted: "
 str = gets.chomp
 print "Type how many positions would you like to shift the message by: "
 num = gets.chomp.to_i
-print "\nHere is your new message: \n\n#{cesaer_cipher(str, num)}\n\n"
+print "\nHere is your new message: \n\n#{caesar_cipher(str, num)}\n\n"
